[package]
name = "PostgREST"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
moka = { version = "0.12", features = ["future"] }
postgres-openssl = "0.5"
openssl = { version = "0.10", features = ["vendored"] }
