[package]
name = "PostgREST"
version = "1.0.6"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
moka = { version = "0.12", features = ["future"] }
postgres-openssl = "0.5"
openssl = { version = "0.10", features = ["vendored"] }
clap = { version = "4", features = ["derive"] }
service-manager = "0.11"
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json"] }
base64 = "0.22"

[target.'cfg(windows)'.dependencies]
windows-service = "0.8"
